# ada-safe-assembly

./: README.md
src/analysis/: CMakeLists.txt  SafeAssemblyAnalysis.cpp  SafeAssemblyAnalysis.h
src/parser/: safe_assembly_ast.adb  safe_assembly_ast.ads  safe_assembly_parser.adb  safe_assembly_parser.ads
src/tests/: test_error_cases.adb  test_parser.adb  test_runner.adb  test_transpiler.adb
src/transpiler/: safe_assembly_transpiler.adb  safe_assembly_transpiler.ads
